@@ -1,6 +1,5 @@
 Version 0.2.0
 * Improve property display.
-* Investigate watchlist support.
 
 
 Version 0.2.x
