@@ -42,6 +42,7 @@ enum {
 	ID_BREAKPOINTPANEL_ADD_EXCEPTION,
 	ID_BREAKPOINTPANEL_ADD_EXPRESSION,
 	ID_BREAKPOINTPANEL_ADD_RETURN,
+	ID_BREAKPOINTPANEL_ADD_WATCH,
 	ID_BREAKPOINTPANEL_GRID,
 	ID_BREAKPOINTPANEL_REMOVE,
 	ID_CONNECTIONPAGE,
