@@ -1,4 +1,5 @@
 Version 0.2.0 (???)
+* Added (very) basic watch breakpoint support and implemented support for the breakpoint_types call to dynamically populate the breakpoint panel toolbar.
 * Added support for setting class/object method breakpoints.
 * Added support for "sticky" breakpoints.
 * Changed the text on the property dialog button to OK.
